# tag-guard

./: .travis.yml  Cargo.toml  README.md
misc/: config.toml  header.txt
src/: engine.rs  enums.rs  error.rs  lib.rs  load.rs  tag.rs  test.rs
src/tag/: mod.rs  object.rs  pool.rs  role.rs  spec.rs  tag.rs
src/test/: changes.rs  check.rs  engine.rs  exists.rs  mod.rs  setup.rs
