[package]
name = "tag-guard"
description = "Library to enforce user-configured relationships between tags."
version = "0.0.1"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5"
