[package]
name = "tag-guard"
description = "Library to enforce user-configured relationships between tags."
version = "0.3.0"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

[dependencies]
easy_strings = "0.2"
serde = { version = "1", features = ["derive"] }
str-macro = "0.1"
